tests/rt/pos/core/cmp-auth.trp
let val x = attenuate (authority, `{alice}`)
    val y = attenuate (authority, `{alice}`)
in x = y
end    