tests/rt/neg/core/exit02.trp
exit (attenuate (authority, {alice}), 0)
